--- a/src/components/CardQuestion/CardQuestion.scss
+++ b/src/components/CardQuestion/CardQuestion.scss
@@ -1,5 +1,5 @@
 .card-question {
-    background-color: #ffffff81;
+    background-color: #bbbbbb54;
     padding: 2rem;
     border-radius: 2rem;
     margin-bottom: 2rem;
@@ -51,4 +51,7 @@
             margin-bottom: 1rem;
         }
     }
+}
+.card-container .card-settings {
+    background-color: #bbbbbb54;
 }
