--- a/src/components/FormQuestion/FormQuestion.scss
+++ b/src/components/FormQuestion/FormQuestion.scss
@@ -1,6 +1,7 @@
 .form-question {
     background-color: #ffffff81;
     padding: 2rem;
+    transition: all ease 1s;
     border-radius: 2rem;
     margin-bottom: 2rem;
     &__question {
@@ -18,9 +19,11 @@
             border-bottom: 2px solid #000;
         }
     }
-    // &__responses {
-    
-    // }
+    &__responses {
+        > button {
+            background: transparent;
+        }
+    }
     &__variants {
         width: 100%;
         display: flex;
@@ -57,15 +60,17 @@
 }
 
 .list-inputs {
-    :not(:last-child) {
-        margin-bottom: 0.5rem;
-    }
+    // :not(:last-child) {
+    //     margin-bottom: 0.8rem;
+    // }
     > li {
         display: flex;
         justify-content: space-between;
-        gap: 2rem;
-        align-items: center;
+        gap: 1rem;
+        // align-items: end;
         position: relative;
+        margin-bottom: 0.9rem;
+
     }
     &__variant {
         width: 100%;
@@ -73,13 +78,57 @@
         background-color: transparent;
         border-bottom: 1px solid #000;
     }
-    &__checkbox {
+    &__checks {
         margin-right: 0.5rem;
+        cursor: pointer;
+        // line-height: 0;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
-    &__btn {
-        position: absolute;
-        right: -2rem;
+    &__checkbox {
+        display: none;
+        // margin-right: 0.5rem;
+        &:checked + .list-inputs__custom-checkbox::before {
+            transform: scale(1);
+        }
+    }
+    &__custom-checkbox {
+        // line-height: 1;
+
+        // margin-right: 0.5rem;
+        display: inline-block;
+        background-color: #fff;
+        border: 3px solid #414141;
+        border-radius: 5px;
+        width: 1.25rem;
+        height: 1.25rem;
+        vertical-align: sub;
+        &::before {
+            content: "";
+            display: inline-block;
+            width: 0.9rem;
+            height: 0.9rem;
+            background-image: url(./../../../public/check/check-solid.svg);
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            transform: scale(0);
+            transition: transform 0.2s ease-out;
+        }
+    }
+    button {
+        // position: absolute;
+        // right: -2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        order: 3;
         background: transparent;
+        // margin: 0 auto;
+        // text-align: center;
+        line-height: 0;
         :hover {
             color: rgb(179, 0, 0);
             transition: color 0.2s ease;
