--- a/src/components/ReadyQuestion/ReadyQuestion.scss
+++ b/src/components/ReadyQuestion/ReadyQuestion.scss
@@ -21,13 +21,44 @@
         }
     }
     &__variant-item {
-        display: flex;
-        gap: 2rem;
-        > p {
+        > label {
             word-break: break-all;
             word-wrap: break-word;
             text-wrap: wrap;
-            font-weight: 600;
+            font-weight: 500;
+        }
+    }
+    &__radio {
+        display: none;
+        &:checked + .ready-question__custom-radio::before {
+            transform: translate(-50%, -50%) scale(1);
+        }
+    }
+    &__custom-radio {
+        display: inline-block;
+        position: relative;
+        background-color: #fff;
+        border-radius: 50%;
+        border: 2px solid #414141;
+        width: 1.25rem;
+        height: 1.25rem;
+        margin-right: 0.5rem;
+        vertical-align: sub;
+        &::before {
+            content: "";
+            display: inline-block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            border: 2px solid #fff;
+            background-color: #077907;
+            background-size: contain;
+            background-position: center;
+            transform: translate(-50%, -50%) scale(0);
+            transition: transform 0.2s ease-out;
         }
     }
 }
