--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -3,6 +3,7 @@
 body {
     font-family: "Montserrat", sans-serif;
     font-size: 1rem;
+    scrollbar-gutter: stable;
     // overflow: hidden;
 }
 
