--- a/src/pages/CreateTest/CreateTest.scss
+++ b/src/pages/CreateTest/CreateTest.scss
@@ -80,4 +80,9 @@
             transition: color 0.3s ease;
         }
     }
+    &__error {
+        color: red;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
 }
