--- a/src/components/ReadyQuestion/ReadyQuestion.scss
+++ b/src/components/ReadyQuestion/ReadyQuestion.scss
@@ -22,6 +22,7 @@
     }
     &__variant-item {
         > label {
+            cursor: pointer;
             word-break: break-all;
             word-wrap: break-word;
             text-wrap: wrap;
