--- a/src/components/layout/Header/Header.scss
+++ b/src/components/layout/Header/Header.scss
@@ -3,4 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media screen and (max-width:450px) {
+        justify-content: center;
+    }
 }
