--- a/src/components/ui/Title/TitleHome.scss
+++ b/src/components/ui/Title/TitleHome.scss
@@ -106,10 +106,12 @@
 .title-home {
     text-align: center;
     line-height: 1.5;
-    font-size: 3.5rem;
+//     font-size: 3.5rem;
+    font-size: clamp(2rem, 9.3vw, 3.5rem);
     color: #fff;
     font-weight: 600;
-    letter-spacing: 1rem;
+//     letter-spacing: 1rem;
+    letter-spacing: clamp(0.5rem, 2.6vw, 1rem);
     text-wrap: wrap;
     text-transform: uppercase;
     max-width: 900px;
