--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -7,11 +7,6 @@ body {
     // overflow: hidden;
 }
 
-.App {
-    min-width: 100%;
-    min-height: 100%;
-  }
-  
   * {
       padding: 0;
       margin: 0;
@@ -67,4 +62,9 @@ body {
     h1, h2, h3, h4, h5, h6 {
       font-size: inherit;
       font-weight: 400;
+    }
+    .App {
+      min-width: 100%;
+      min-height: 100%;
+      margin: 0 auto;
     }
