--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -13,8 +13,10 @@
         margin-bottom: 5rem;
         background-color: #fff;
         padding: 1rem 4rem;
-        border-radius: 1.5rem;
-        font-size: 2.5rem;
+        // border-radius: 1.5rem;
+        border-radius: clamp(1.2rem, 4vw, 1.5rem);
+        font-size: clamp(1.5rem, 6.6vw, 2.5rem);
+        text-wrap: nowrap;
         font-weight: 700;
         mix-blend-mode: screen;
         color: #000;
