--- a/src/pages/ShowTest/ShowTest.scss
+++ b/src/pages/ShowTest/ShowTest.scss
@@ -50,7 +50,12 @@
     align-items: start;
     overflow: hidden;
     &__container {
-        width: 1250px;
+        // width: 1250px;
+        width: clamp(1000px, 100vw, 1250px);
+        margin: 0 auto;
+        @media screen and (max-width:1000px) {
+            width: 100%;
+        }
     }
     &__button {
         background-color: transparent;
@@ -58,6 +63,7 @@
         padding: 1rem 2.5rem;
         border-radius: 1.5rem;
         font-size: 1.5rem;
+        text-align: center;
         font-weight: 700;
         color: #fff;
         transition: all 1s ease;
@@ -69,7 +75,8 @@
     }
     &__list {
         background-color: #ffffff81;
-        padding: 2rem 4rem;
+        // padding: 2rem 4rem;
+        padding: clamp(1rem, 7.6vw, 2rem) clamp(2rem, 15.2vw, 4rem);
         border-radius: 2rem;
         margin-bottom: 2rem;
         :not(:last-of-type) {
