--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -1,129 +1,128 @@
 .form {
-    background-color: #ffffff81;
-    padding: clamp(1rem, 7.6vw, 2rem);
-    transition: all ease 1s;
-    border-radius: clamp(1.2rem, 7.6vw, 2rem);
-    margin-bottom: 2rem;
-    &__question {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        margin-bottom: 1rem;
-        label {
-            font-weight: 700;
-        }
-        input {
-            font-size: 1rem;
-            padding: 0.5rem 0;
-            background-color: #00000005;
-            border-bottom: 2px solid #000;
-        }
+  background-color: #ffffff81;
+  padding: clamp(1rem, 7.6vw, 2rem);
+  transition: all ease 1s;
+  border-radius: clamp(1.2rem, 7.6vw, 2rem);
+  margin-bottom: 2rem;
+  &__question {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    label {
+      font-weight: 700;
     }
-    &__responses {
-        > button {
-            background: transparent;
-        }
+    input {
+      font-size: 1rem;
+      padding: 0.5rem 0;
+      background-color: #00000005;
+      border-bottom: 2px solid #000;
     }
-    &__variants {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        padding-right: 2rem;
+  }
+  &__responses {
+    > button {
+      background: transparent;
     }
-    &__label {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 0.5rem;
-        font-weight: 500;
+  }
+  &__variants {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-right: 2rem;
+  }
+  &__label {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+  }
+  &__add {
+    background: transparent;
+    :hover {
+      color: #b30000;
+      transition: color 0.2s ease;
     }
-    &__add {
-        background: transparent;
-        :hover {
-            color: #b30000;
-            transition: color 0.2s ease;
-        }
+  }
+  &__error {
+    display: block;
+    margin-top: 1rem;
+    color: #69696981;
+  }
+  &__buttons {
+    display: flex;
+    gap: 1.5rem;
+    justify-content: end;
+    > button {
+      background: transparent;
+      font-size: 1.2rem;
+      font-weight: 700;
     }
-    &__error {
-        display: block;
-        margin-top: 1rem;
-        color: #69696981;
+    :hover {
+      transform: scale(1.1);
+      transition: transform 0.2s ease;
     }
-    &__buttons {
-        display: flex;
-        gap: 1.5rem;
-        justify-content: end;
-        > button {
-            background: transparent;
-            font-size: 1.2rem;
-            font-weight: 700;
-        }
-        :hover {
-            transform: scale(1.1);
-            transition: transform 0.2s ease;
-        }
-    }
+  }
 }
 
 .list-inputs {
-    > li {
-        display: flex;
-        justify-content: space-between;
-        gap: 1rem;
-        position: relative;
-        margin-bottom: 0.9rem;
-
+  > li {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+    position: relative;
+    margin-bottom: 0.9rem;
+  }
+  &__variant {
+    width: 100%;
+    padding: 0.5rem 0;
+    background-color: transparent;
+    border-bottom: 1px solid #000;
+  }
+  &__checks {
+    margin-right: 0.5rem;
+    cursor: pointer;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__checkbox {
+    display: none;
+    &:checked + .list-inputs__custom-checkbox::before {
+      transform: scale(1);
     }
-    &__variant {
-        width: 100%;
-        padding: 0.5rem 0;
-        background-color: transparent;
-        border-bottom: 1px solid #000;
+  }
+  &__custom-checkbox {
+    display: inline-block;
+    background-color: #fff;
+    border: 3px solid #414141;
+    border-radius: 5px;
+    width: 1.25rem;
+    height: 1.25rem;
+    vertical-align: sub;
+    &::before {
+      content: '';
+      display: inline-block;
+      width: 0.9rem;
+      height: 0.9rem;
+      background-image: url(./../../../public/check/check-solid.svg);
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      transform: scale(0);
+      transition: transform 0.2s ease-out;
     }
-    &__checks {
-        margin-right: 0.5rem;
-        cursor: pointer;
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+  }
+  button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    order: 3;
+    background: transparent;
+    line-height: 0;
+    :hover {
+      color: rgb(179, 0, 0);
+      transition: color 0.2s ease;
     }
-    &__checkbox {
-        display: none;
-        &:checked + .list-inputs__custom-checkbox::before {
-            transform: scale(1);
-        }
-    }
-    &__custom-checkbox {
-        display: inline-block;
-        background-color: #fff;
-        border: 3px solid #414141;
-        border-radius: 5px;
-        width: 1.25rem;
-        height: 1.25rem;
-        vertical-align: sub;
-        &::before {
-            content: "";
-            display: inline-block;
-            width: 0.9rem;
-            height: 0.9rem;
-            background-image: url(./../../../public/check/check-solid.svg);
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
-            transform: scale(0);
-            transition: transform 0.2s ease-out;
-        }
-    }
-    button {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        order: 3;
-        background: transparent;
-        line-height: 0;
-        :hover {
-            color: rgb(179, 0, 0);
-            transition: color 0.2s ease;
-        }
-    }
+  }
 }
