--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,70 +1,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
-    font-family: "Montserrat", sans-serif;
-    font-size: 1rem;
-    scrollbar-gutter: stable;
-    // overflow: hidden;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1rem;
+  scrollbar-gutter: stable;
+  // overflow: hidden;
 }
 
-  * {
-      padding: 0;
-      margin: 0;
-      border: 0;
-    }
-    *, *:before, *:after {
-      -webkit-box-sizing: border-box;
-      box-sizing: border-box;
-    }
-    :focus, :active {
-      outline: none;
-    }
-    a:focus, a:active {
-      outline: none;
-    }
-    nav, footer, header, aside {
-      display: block;
-    }
-    html, body {
-      height: 100%;
-      width: 100%;
-      font-size: 100%;
-      line-height: 1;
-      -ms-text-size-adjust: 100%;
-      -moz-text-size-adjust: 100%;
-      -webkit-text-size-adjust: 100%;
-    }
-    input, button, textarea {
-      font-family: inherit;
-    }
-    input::-ms-clear {
-      display: none;
-    }
-    button {
-      cursor: pointer;
-    }
-    button::-moz-focus-inner {
-      padding: 0;
-      border: 0;
-    }
-    a, a:visited {
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: none;
-    }
-    // ul li {
-    //   list-style-type: none;
-    // }
-    img {
-      vertical-align: top;
-    }
-    h1, h2, h3, h4, h5, h6 {
-      font-size: inherit;
-      font-weight: 400;
-    }
-    .App {
-      min-width: 100%;
-      min-height: 100%;
-      margin: 0 auto;
-    }
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+:focus,
+:active {
+  outline: none;
+}
+a:focus,
+a:active {
+  outline: none;
+}
+nav,
+footer,
+header,
+aside {
+  display: block;
+}
+html,
+body {
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+input,
+button,
+textarea {
+  font-family: inherit;
+}
+input::-ms-clear {
+  display: none;
+}
+button {
+  cursor: pointer;
+}
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+a,
+a:visited {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+// ul li {
+//   list-style-type: none;
+// }
+img {
+  vertical-align: top;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: 400;
+}
+.App {
+  min-width: 100%;
+  min-height: 100%;
+  margin: 0 auto;
+}
