--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,30 +1,30 @@
 .home-page {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    overflow: hidden;
-    > .header {
-        justify-content: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  > .header {
+    justify-content: center;
+  }
+  &__button {
+    margin-bottom: 5rem;
+    background-color: #fff;
+    padding: 1rem 4rem;
+    // border-radius: 1.5rem;
+    border-radius: clamp(1.2rem, 4vw, 1.5rem);
+    font-size: clamp(1.5rem, 6.6vw, 2.5rem);
+    text-wrap: nowrap;
+    font-weight: 700;
+    mix-blend-mode: screen;
+    color: #000;
+    transition: all 1s ease;
+    &:hover {
+      transform: translateY(-0.3rem);
+      transition: all 1s ease;
+      background-color: rgb(212, 141, 141);
     }
-    &__button {
-        margin-bottom: 5rem;
-        background-color: #fff;
-        padding: 1rem 4rem;
-        // border-radius: 1.5rem;
-        border-radius: clamp(1.2rem, 4vw, 1.5rem);
-        font-size: clamp(1.5rem, 6.6vw, 2.5rem);
-        text-wrap: nowrap;
-        font-weight: 700;
-        mix-blend-mode: screen;
-        color: #000;
-        transition: all 1s ease;
-        &:hover {
-            transform: translateY(-0.3rem);
-            transition: all 1s ease;
-            background-color: rgb(212, 141, 141)
-        }
-    }
+  }
 }
