--- a/src/pages/ShowTest/ShowTest.scss
+++ b/src/pages/ShowTest/ShowTest.scss
@@ -41,18 +41,13 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background: rgb(204, 251, 255);
-  background: linear-gradient(
-    127deg,
-    rgba(204, 251, 255, 1) 25%,
-    rgba(239, 150, 197, 1) 85%
-  );
+  background: rgb(250,251,253);
+  background: linear-gradient(133deg, rgba(250,251,253,1) 40%, rgba(220,233,239,1) 100%);
   display: flex;
   justify-content: center;
   align-items: start;
   overflow: hidden;
   &__container {
-    // width: 1250px;
     width: clamp(1000px, 100vw, 1250px);
     margin: 0 auto;
     @media screen and (max-width: 1000px) {
@@ -77,7 +72,6 @@
   }
   &__list {
     background-color: #ffffff81;
-    // padding: 2rem 4rem;
     padding: clamp(1rem, 7.6vw, 2rem) clamp(2rem, 15.2vw, 4rem);
     border-radius: 2rem;
     margin-bottom: 2rem;
