--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,7 +1,10 @@
 .card {
-  background-color: #bbbbbb54;
+  // background-color: #bbbbbb54;
+  background-color: transparent;
   padding: clamp(1rem, 7.6vw, 2rem);
   border-radius: clamp(1.2rem, 7.6vw, 2rem);
+  border: 0.25rem solid #00000083;
+  box-shadow: 4px 4px 15px -8px rgba(0,0,0,0.75);
   margin-bottom: 2rem;
   width: 100%;
   &__header {
