--- a/src/components/ui/ControlPanel/ControlPanel.scss
+++ b/src/components/ui/ControlPanel/ControlPanel.scss
@@ -3,8 +3,7 @@
   justify-content: space-between;
   padding: 2rem;
   margin-bottom: 1rem;
-  // border-top: 4px solid #00000030;
-  border-bottom: 4px solid #00000030;
+  border-bottom: 4px solid #00000083;
   flex-wrap: wrap;
   align-items: center;
   gap: 1rem;
@@ -15,8 +14,8 @@
   &__title {
     font-size: 2.5rem;
     font-weight: 700;
-    color: #00000030;
-    text-shadow: 3px 3px 15px #00000030;
+    color: #00000083;
+    text-shadow: 1px 1px 20px rgba(0, 0, 0, 0.5);
   }
   &__buttons {
     display: flex;
@@ -29,11 +28,11 @@
       justify-content: center;
       text-align: center;
       background-color: transparent;
-      box-shadow: 3px 3px 15px 0px #00000030;
+      box-shadow: 3px 3px 15px -8px rgba(0,0,0,0.75);
       border-radius: 0.5rem;
-      border: 3px solid #00000030;
+      border: 3px solid #00000083;
       padding: 0.5rem;
-      color: #00000030;
+      color: #00000083;
       &:active {
         transform: translate(1px, 1px);
       }
@@ -47,9 +46,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #000;
-    background-color: #00000030;
-    box-shadow: 3px 3px 15px 0px #00000030;
+    color: #00000083;
     border-radius: 0.5rem;
     border: 3px solid transparent;
     padding: 0.5rem 2rem;
