--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -6,14 +6,10 @@
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
-  > .header {
-    justify-content: center;
-  }
   &__button {
     margin-bottom: 5rem;
     background-color: #fff;
     padding: 1rem 4rem;
-    // border-radius: 1.5rem;
     border-radius: clamp(1.2rem, 4vw, 1.5rem);
     font-size: clamp(1.5rem, 6.6vw, 2.5rem);
     text-wrap: nowrap;
@@ -27,4 +23,9 @@
       background-color: rgb(212, 141, 141);
     }
   }
+}
+
+.home-logo {
+  width: clamp(150px, 45.5vw, 250px);
+  margin: 0 auto;
 }
